--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ eth-typing~=5.2.1
 supabase~=2.18.1
 py_clob_client~=0.23.0
 typing_extensions~=4.12.2
+py_clob_client~=0.23.0
+uvicorn~=0.35.0
+typing_extensions~=4.12.2
