--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ python-dotenv~=1.1.1
 eth-typing~=5.2.1
 supabase~=2.18.1
 uvicorn~=0.35.0
+./shared_libraries/shared_infra_pkg
+./shared_libraries/shared_wallets_pkg
